# MF-Airflow

./: .env.dev.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  requirements.dev.txt  requirements.research.txt  requirements.txt
.github/workflows/: build-image.yaml  check-lint-and-format.yaml
airflow/: airflow.cfg  connections.json
airflow/dags/: median_filtering.py  nha_be_processed_data.py  process_input_data.py
dev-configs/: README.md  pg_init.sql  sftp-configs.json
research/: convert_raw_to_numpy_array.ipynb  generate_radar_file.ipynb  investigate_mdv.ipynb  local_investigation.ipynb  netcdf_reader.ipynb  radar.ipynb
scripts/: create-admin-user.sh  setup-dev.sh
