[project]
name = "MF-Airflow"
version = "0.0.1"
description = ""
requires-python = ">=3.11"
authors = [
    { name = "ducthuy-ng", email = "thuy.nguyenduc02@hcmut.edu.vn" },
    { name = "TuanKietTran", email = "kiet.trank1netic@hcmut.edu.vn" },
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"
line-length = 100
